--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,1 +1,23 @@
+version: "3"
 
+services:
+  redisdb:
+    image: redis:latest
+    ports: 
+      - 6300:6379
+    volumes :
+      - "./data/redis-seed/:/data"
+      
+  mymongo:
+    image: mongo:latest
+    ports: 
+      - 27100:27017
+
+  mongo-seed:
+    image: mongo:latest
+    links:
+        - mymongo
+    volumes:
+        - ./data/mongo-seed:/mongo-seed
+    command:
+        sh -c "/mongo-seed/import_metricity.sh"
